# DeepQL

./: DeepQL.cabal  README.md
src/: Main.hs
src/Database/: DQL.hs
src/Database/DQL/: Combinators.hs  Parsers.hs  Tokenizer.hs
src/Database/DQL/Types/: Syntax.hs  Tokens.hs
test/: Main.hs
tools/: Main.hs
