name:                DeepQL
version:             0.1.0.0
synopsis:            A database that supports schema and structural queries
homepage:            http://www.pliosoft.com/deepql
license:             AllRightsReserved
author:              Christopher C. Lord
maintainer:          christopher@pliosoft.com
copyright:           Copyright 2015       
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:    src/
  default-language:    Haskell2010
  ghc-options:       -Wall -O2
  exposed-modules:   Database.DQL
                     Database.DQL.Types.Syntax
                     Database.DQL.Parsers
                     Database.DQL.Tokenizer
                     Database.DQL.Types.Tokens
                     Database.DQL.Combinators
  build-depends:     attoparsec >= 0.10.4.0,
                     parsec >= 3.1.5,
                     data-default >= 0.5.3,
                     text >= 0.11.2.0,
                     base >= 4 && <5


test-suite test
    type: exitcode-stdio-1.0
    default-language:    Haskell2010
    main-is: Main.hs
    hs-source-dirs: test
    build-depends: base,
                   DeepQL,
                   text,
                   HUnit,
                   hspec,
                   bifunctors,
                   parsec,
                   mtl


executable parse-dql-schema 
    build-depends: base,
                   DeepQL,
                   text,
                   parsec,
                   bifunctors,
                   mtl
    main-is: tools/Main.hs
    default-language:    Haskell2010

